# openni_tracking_ros

./: CMakeLists.txt  package.xml
launch/: tracking_create_model.launch  tracking_sample.launch  tracking_world.launch
launch/params/: parameters.yaml
src/: create_model.cpp  planar_segmentation.cpp  testyy.cpp  tracking_sample.cpp
urdf/: kinect.urdf.xacro
